# neurochain-substrate

./: .gitignore  README.md
interact/: Cargo.toml
interact/src/: lib.rs  main.rs  train_regress.rs
neurochain-substrate/: Cargo.toml  Neurichain.code-workspace  README.md
neurochain-substrate/runtime/: Cargo.toml
neurochain-substrate/runtime/src/: lib.rs  neurochain.rs
neurochain-substrate/runtime/wasm/: Cargo.toml  build.sh
neurochain-substrate/runtime/wasm/src/: lib.rs
neurochain-substrate/src/: chain_spec.rs  main.rs  service.rs
