[package]
name = "example"
version = "0.1.0"
authors = ["pavelkrolevets <pavelkrolevets@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
ndarray = "0.13.0"
csv = "1.1"
mnist = "0.4.0"
rulinalg = "0.4.2"
rand = "0.7.2"
rand_distr = "0.2.2"