[lib]
crate-type = ['cdylib']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['neurochain-substrate-runtime/std']
[dependencies.neurochain-substrate-runtime]
default-features = false
path = '..'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'neurochain-substrate-runtime-wasm'
version = '1.0.0'
